# AI-Investment

./: .env.example  .gitignore  CLAUDE.md  README.md  REFACTOR.md  TODO.md  bot_server.py  main.py  pyproject.toml  requirements.txt  test_mvp.py
.github/workflows/: daily-run.yml
api/: index.py  requirements.txt  webhook.py
config/: strategy.yaml
data_provider/: COMPAT_NOTE.md
docs/: prompts.md
docs/superpowers/plans/: 2026-06-21-d1-global-market-data-plan.md  2026-06-21-d6-radar-plan.md  2026-06-22-d3-global-news-plan.md
docs/superpowers/specs/: 2026-06-21-d1-global-market-data-design.md  2026-06-21-d6-radar-design.md  2026-06-22-d3-global-news-design.md
references/legacy_gems/: retry_pattern.py
src/: __init__.py  advisor.py  auto_bill_parser.py  briefing.py  classification.py  config_loader.py  constants.py  earnings_calendar.py  env.py  feishu_client.py  global_news.py  holiday_gate.py  llm.py  macro_calendar.py  market_brief.py  market_data.py  news_fetcher.py  notify.py  pending_resolver.py  price_updater.py  prompt_templates.py  prompts.md  radar.py  strategy.py  timeout_guard.py
tests/: test_global_news.py  test_macro_calendar.py  test_market_data.py  test_radar.py  test_strategy.py
