[project]
name = "ai-quant-system"
version = "0.1.0"
description = "AI量化投资系统 —— 资产标签化再平衡，飞书多维表格驱动，零成本GitHub Actions运行"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.16.0",
    "openai>=1.0.0",
    "yfinance>=1.3.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "lark-oapi>=1.0.0",
    "fake-useragent>=1.4.0",
    "tenacity>=8.2.0",
    "feedparser>=6.0.12",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
data = [
    "tavily-python>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
